[package]
name = "river"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fdt = "0.1.3"
sbi = "0.2.0"
bitflags = "1.3.2"

[build-dependencies]
cc = "1.0.73"

[profile.dev]
# opt-level=1 is necessary because LLVM is weird
opt-level = 1
# debug=2 is beefy, but **incredibly** helpful for debugging, esp. before paging
# as it gives your debugger type layout info
debug = 2