[package]
name = "river"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fdt = "0.1.3"
sbi = "0.2.0"
bitflags = "1.3.2"
bitfield = "0.14.0"
memoffset = "0.7.1"

[dependencies.num_enum]
version = "0.7.0"
default-features = false

[dependencies.rille]
path = "../rille"
features = ["kernel"]

[dependencies.itertools]
version = "0.11.0"
default-features = false

[build-dependencies]
cc = "1.0.73"
