[package]
name = "userspace_testing"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rille = { path = "../../rille" }
panic_handler = { path = "../panic_handler" }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
owo-colors = "3.5.0"
fdt = "0.1.5"
rille_user = { path = "../rille_user" }